# book-to-skill

./: .gitignore  404.html  CHANGELOG.md  CNAME  README.md  SKILL.md  index.html  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml
.stone/traces/: 2026-06-08.jsonl
ARCHITECTURE/: index.html
BACKERS/: index.html
PERFORMANCE/: index.html
book_to_skill/: __init__.py  __main__.py  chapter_detector.py  cli.py  config.py  dependencies.py  glossary_extractor.py  utils.py
book_to_skill/parsers/: calibre.py  docx.py  epub.py  html.py  pdf.py  rtf.py  text.py
docs/: ARCHITECTURE.md
examples/lux-romae-google-ads/: SKILL.md  cheatsheet.md  glossary.md  patterns.md
examples/lux-romae-google-ads/chapters/: ch01-executive-summary.md  ch02-market-funnel-diagnosis.md  ch03-campaign-architecture.md  ch04-keywords-audiences-bidding.md  ch05-measurement-tracking.md  ch06-attribution-privacy.md  ch07-creative-landing-multilingual.md  ch08-roadmap-testing-kpis.md
examples/sleep-meditation-generator/: SKILL.md
guide/: index.html
scripts/: extract.py
scripts/extractor/: __init__.py  dependencies.py  utils.py
search/: search_index.json
skill-reference/: index.html
tests/: test_book_to_skill.py  test_caching.py  test_chapter_detector.py  test_chunking_glossary.py  test_discovery_tax.py  test_extract.py  test_extractor.py  test_parallel.py  test_parser_exception_logging.py  test_validate_index.py
tools/: discovery_tax.py  validate_index.py  validate_skill.py
(+17 files in other folders)
