[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-to-skill"
version = "1.2.0"
description = "Convert books and documents into structured, on-demand agent skills."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
book-to-skill = "book_to_skill.cli:main"

[project.optional-dependencies]
epub = ["ebooklib", "beautifulsoup4"]
pdf = ["pypdf", "pdfminer.six"]
docx = ["python-docx"]
rtf = ["striprtf"]
technical = ["docling"]
all = [
    "ebooklib",
    "beautifulsoup4",
    "pypdf",
    "pdfminer.six",
    "python-docx",
    "striprtf",
    "docling"
]


# Tooling config so `ruff check .` and `pytest` locally match CI without flags.
[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# High-value gate only: syntax errors (E9) + pyflakes (F). Style stays ungated.
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
